--- a/internalstaging.theanvil.io/manifest.json
+++ b/internalstaging.theanvil.io/manifest.json
@@ -45,7 +45,9 @@
     "dispatcher_job_num": "10",
     "tier_access_level": "regular",
     "tier_access_limit": 50,
-    "public_datasets": true
+    "public_datasets": true,
+    "argocd": "true",
+    "waf_enabled": "true"
   },
   "peregrine": {
     "peregrine_timeout": "45"
