--- a/dataguids.org/manifest.json
+++ b/dataguids.org/manifest.json
@@ -25,7 +25,9 @@
     "kube_bucket": "kube-dataguids-gen3",
     "logs_bucket": "logs-dataguids-gen3",
     "sync_from_dbgap": "False",
-    "useryaml_s3path": "s3://cdis-gen3-users/dataguids/user.yaml"
+    "useryaml_s3path": "s3://cdis-gen3-users/dataguids/user.yaml",
+    "argocd": "true",
+    "waf_enabled": "true"
   },
   "canary": {
     "default": 0
