--- a/gen3qa.kidsfirstdrc.org/manifest.json
+++ b/gen3qa.kidsfirstdrc.org/manifest.json
@@ -37,7 +37,9 @@
     "sync_from_dbgap": "False",
     "netpolicy": "on",
     "useryaml_s3path": "s3://cdis-gen3-users/kfqa2/user.yaml",
-    "maintenance_mode": "off"
+    "maintenance_mode": "off",
+    "argocd": "true",
+    "waf_enabled": "true"
   },
   "canary": {
     "default": 0
