--- a/genomel.bionimbus.org/manifest.json
+++ b/genomel.bionimbus.org/manifest.json
@@ -82,7 +82,9 @@
     "portal_app": "gitops",
     "sync_from_dbgap": "False",
     "useryaml_s3path": "s3://cdis-gen3-users/genomel/user.yaml",
-    "dispatcher_job_num": "10"
+    "dispatcher_job_num": "10",
+    "argocd": "true",
+    "waf_enabled": "true"
   },
   "ssjdispatcher": {
     "job_images": {
