--- a/healdata.org/manifest.json
+++ b/healdata.org/manifest.json
@@ -108,7 +108,9 @@
     "useryaml_s3path": "s3://cdis-gen3-users/heal/user.yaml",
     "dd_enabled": true,
     "document_url": "https://heal.github.io/platform-documentation",
-    "frontend_root": "gen3ff"
+    "frontend_root": "gen3ff",
+    "argocd": "true",
+    "waf_enabled": "true"
   },
   "canary": {
     "default": 0
