--- a/ibdgc.datacommons.io/manifest.json
+++ b/ibdgc.datacommons.io/manifest.json
@@ -45,7 +45,9 @@
     "useryaml_s3path": "s3://cdis-gen3-users/ibdgc/user.yaml",
     "maintenance_mode": "off",
     "public_datasets": true,
-    "dd_enabled": true
+    "dd_enabled": true,
+    "argocd": "true",
+    "waf_enabled": "true"
   },
   "canary": {
     "default": 0
