--- a/jcoin.datacommons.io/manifest.json
+++ b/jcoin.datacommons.io/manifest.json
@@ -43,7 +43,9 @@
     "netpolicy": "on",
     "useryaml_s3path": "s3://cdis-gen3-users/jcoin/user.yaml",
     "maintenance_mode": "off",
-    "dd_enabled": true
+    "dd_enabled": true,
+    "argocd": "true",
+    "waf_enabled": "true"
   },
   "canary": {
     "default": 0
