--- a/staging.gen3.biodatacatalyst.nhlbi.nih.gov/manifest.json
+++ b/staging.gen3.biodatacatalyst.nhlbi.nih.gov/manifest.json
@@ -301,7 +301,9 @@
     "tier_access_limit": 50,
     "dispatcher_job_num": "10",
     "netpolicy": "on",
-    "dd_enabled": null
+    "dd_enabled": null,
+    "argocd": "true",
+    "waf_enabled": "true"
   },
   "canary": {
     "default": 0
