--- a/vpodc.data-commons.org/manifest.json
+++ b/vpodc.data-commons.org/manifest.json
@@ -46,7 +46,9 @@
     "useryaml_s3path": "s3://cdis-gen3-users/vadcprod/user.yaml",
     "netpolicy": "on",
     "maintenance_mode": "off",
-    "dd_enabled": true
+    "dd_enabled": true,
+    "argocd": "true",
+    "waf_enabled": "true"
   },
   "guppy": {
     "indices": [
