--- a/nci-crdc.datacommons.io/manifests/fence/fence-config-public.yaml
+++ b/nci-crdc.datacommons.io/manifests/fence/fence-config-public.yaml
@@ -197,3 +197,15 @@ S3_BUCKETS:
   gdc-exceptional-responders-er-phs001145-controlled:
     cred: 'fence_bot'
     region: 'us-east-1'
+  gdc-cddp-eagle-1-phs001239-2-open:
+    cred: 'fence_bot'
+    region: 'us-east-1'
+  gdc-cddp-eagle-1-phs001239-controlled:
+    cred: 'fence_bot'
+    region: 'us-east-1'
+  gdc-match-z1d-phs001859-2-open:
+    cred: 'fence_bot'
+    region: 'us-east-1'
+  gdc-match-z1d-phs001859-controlled:
+    cred: 'fence_bot'
+    region: 'us-east-1'
