--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -9,6 +9,7 @@ tb.diseasedatahub.org @trevars @uc-cdis/planx-qa
 flu.diseasedatahub.org @trevars @uc-cdis/planx-qa
 diseasedatahub.org @trevars @uc-cdis/planx-qa
 dcf-interop.kidsfirstdrc.org @trevars @uc-cdis/planx-qa
+chorus.data-commons.org @trevars @uc-cdis/planx-qa
 
 nci-crdc-staging.datacommons.io @frankliuao @uc-cdis/planx-qa
 nci-crdc.datacommons.io @frankliuao @uc-cdis/planx-qa
