--- a/chicagoland.pandemicresponsecommons.org/manifest.json
+++ b/chicagoland.pandemicresponsecommons.org/manifest.json
@@ -51,7 +51,8 @@
     "maintenance_mode": "off",
     "dd_enabled": true,
     "argocd": "true",
-    "waf_enabled": "true"
+    "waf_enabled": "true",
+    "karpenter": true
   },
   "portal": {
     "GEN3_BUNDLE": "covid19"
