Change BDCat AggMDS endpoint to pre-prod

--- a/brh.data-commons.org/metadata/aggregate_config.json
+++ b/brh.data-commons.org/metadata/aggregate_config.json
@@ -61,7 +61,7 @@
 			}
 		},
 		"BioData Catalyst": {
-			"mds_url": "https://gen3.biodatacatalyst.nhlbi.nih.gov/",
+			"mds_url": "https://preprod.gen3.biodatacatalyst.nhlbi.nih.gov/",
 			"commons_url" : "gen3.biodatacatalyst.nhlbi.nih.gov",
 			"adapter": "gen3",
 			"config" : {
