chore add CDS S3 bucket to DCF

--- a/nci-crdc.datacommons.io/manifests/fence/fence-config-public.yaml
+++ b/nci-crdc.datacommons.io/manifests/fence/fence-config-public.yaml
@@ -68,6 +68,9 @@ S3_BUCKETS:
   gdc-genie-phs001337-controlled:
     cred: 'fence_bot'
     region: 'us-east-1'
+  cds-290-htan-x6gj-xr09:
+    cred: 'fence_bot'
+    region: 'us-east-1'
   cds-54-phs000178:
     cred: 'fence_bot'
     region: 'us-east-1'
