--- a/portal.occ-data.org/manifest.json
+++ b/portal.occ-data.org/manifest.json
@@ -15,7 +15,7 @@
     "sheepdog": "quay.io/cdis/sheepdog:2022.02",
     "portal": "quay.io/cdis/data-portal:2022.02",
     "pidgin": "quay.io/cdis/pidgin:2022.02",
-    "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.2-debian-cloudwatch",
+    "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.15.3-debian-cloudwatch-1.0",
     "requestor": "quay.io/cdis/requestor:2022.02"
   },
   "arborist": {
