deploying waf to midrc staging

--- a/staging.midrc.org/manifest.json
+++ b/staging.midrc.org/manifest.json
@@ -166,7 +166,8 @@
     "tier_access_level": "private",
     "tier_access_limit": "50",
     "maintenance_mode": "off",
-    "dd_enabled": true
+    "dd_enabled": true,
+    "waf_enabled": true
   },
   "canary": {
     "default": 0
