chore(brh-karpenter): Added karpenter to BRH

--- a/brh.data-commons.org/manifest.json
+++ b/brh.data-commons.org/manifest.json
@@ -49,7 +49,8 @@
     "netpolicy": "on",
     "dd_enabled": true,
     "argocd": "true",
-    "waf_enabled": "true"
+    "waf_enabled": "true",
+    "karpenter": "true"
   },
   "metadata": {
     "USE_AGG_MDS": true,
