--- a/vpodc.data-commons.org/manifest.json
+++ b/vpodc.data-commons.org/manifest.json
@@ -48,7 +48,8 @@
     "maintenance_mode": "off",
     "dd_enabled": true,
     "argocd": "true",
-    "waf_enabled": "true"
+    "waf_enabled": "true",
+    "karpenter": "true"
   },
   "guppy": {
     "indices": [
