feat: Add site (from core metadata collection) to filters under Files tab on Exploration page

--- a/ibdgc.datacommons.io/etlMapping.yaml
+++ b/ibdgc.datacommons.io/etlMapping.yaml
@@ -40,6 +40,12 @@ mappings:
       - name: data_format
       - name: data_type
       - name: state
+    injecting_props:
+      core_metadata_collection:
+        props:
+          - name: site
+            src: creator
+            fn: set
   - name: ibdgc_supplementary_file
     doc_type: supplementary_file
     type: collector
